// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create an API key you can use to access our REST or SMTP API services.
      </p>,
      "image": "Setup",
      "secondaryAction": Object {
        "content": "View our API Docs",
        "external": true,
        "to": "https://developers.sparkpost.com/api",
      },
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create API Key",
      "to": "/account/api-keys/create",
    }
  }
  title="API Keys"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "width": "40%",
        },
        Object {
          "label": "Key",
          "width": "20%",
        },
        Object {
          "label": "Subaccount",
          "width": "20%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "key",
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "label",
          "short_key",
          "id",
        ],
        "keyMap": Object {
          "key": "short_key",
          "name": "label",
        },
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "grants": Array [
            "metrics/view",
          ],
          "label": "Test Key 1",
          "short_key": "ab01",
        },
        Object {
          "grants": Array [
            "smtp/inject",
          ],
          "label": "Test Key 2",
          "short_key": "fe98",
        },
      ]
    }
  />
</Page>
`;

exports[`renders errors when present 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create an API key you can use to access our REST or SMTP API services.
      </p>,
      "image": "Setup",
      "secondaryAction": Object {
        "content": "View our API Docs",
        "external": true,
        "to": "https://developers.sparkpost.com/api",
      },
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create API Key",
      "to": "/account/api-keys/create",
    }
  }
  title="API Keys"
>
  <ApiErrorBanner
    errorDetails="Uh oh! It broke. "
    message="Sorry, we seem to have had some trouble loading your API keys."
    reload={[Function]}
  />
</Page>
`;

exports[`should show api key banner on successful create 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Create an API key you can use to access our REST or SMTP API services.
      </p>,
      "image": "Setup",
      "secondaryAction": Object {
        "content": "View our API Docs",
        "external": true,
        "to": "https://developers.sparkpost.com/api",
      },
      "show": false,
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create API Key",
      "to": "/account/api-keys/create",
    }
  }
  title="API Keys"
>
  <Connect(ApiKeySuccessBanner)
    title="New API Key"
  />
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "width": "40%",
        },
        Object {
          "label": "Key",
          "width": "20%",
        },
        Object {
          "label": "Subaccount",
          "width": "20%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "key",
          "name",
          "id",
        ],
        "itemToStringKeys": Array [
          "label",
          "short_key",
          "id",
        ],
        "keyMap": Object {
          "key": "short_key",
          "name": "label",
        },
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "grants": Array [
            "metrics/view",
          ],
          "label": "Test Key 1",
          "short_key": "ab01",
        },
        Object {
          "grants": Array [
            "smtp/inject",
          ],
          "label": "Test Key 2",
          "short_key": "fe98",
        },
      ]
    }
  />
</Page>
`;

exports[`should show loading component during load 1`] = `<Loading />`;
